# saros

./: .env.example  .gitignore  Cargo.toml  Containerfile  fly.toml
.github/workflows/: image.yml
src/: auth.rs  events.rs  lib.rs  login.rs  main.rs  metrics.rs  mirror.rs  passkey.rs  ratelimit.rs
src/db/: audit.rs  mod.rs  notifications.rs  sessions.rs  stats.rs  submissions.rs  tests.rs  users.rs
src/services/: auth.rs  blob.rs  firmware.rs  mod.rs
src/store/: blobs.rs  catalog.rs  index.rs  mod.rs  tests.rs
